--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,13 +2,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SerrureCodee.MainPage"
              BackgroundColor="{DynamicResource SecondaryColor}">
+    <StackLayout>
+        <Grid RowSpacing="5" ColumnSpacing="5"
+            ColumnDefinitions="60,60,60,60" 
+            RowDefinitions="70,30,70,70,70,70,30,50"
+            HorizontalOptions="CenterAndExpand"
+            VerticalOptions="CenterAndExpand"
+            x:Name="GameGrid">
 
-    <Grid RowSpacing="5" ColumnSpacing="5"
-        ColumnDefinitions="60,60,60,60" 
-        RowDefinitions="70,30,70,70,70,70"
-        HorizontalOptions="CenterAndExpand"
-        VerticalOptions="CenterAndExpand"
-        x:Name="GameGrid">
-    </Grid>
+            <Entry x:Name="EntryCode" Grid.Row="7" Grid.ColumnSpan="4" Placeholder= "Enter Code" TextChanged="OnEntryTextChanged" />
+            
+        </Grid>
         
+
+    </StackLayout>
 </ContentPage>
